--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1",
     "use-mask-input": "^3.4.2",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
