--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
+    "@mercadopago/sdk-react": "^1.0.4",
     "@mui/icons-material": "^7.1.0",
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^7.1.0",
@@ -29,6 +30,7 @@
     "date-fns": "^4.1.0",
     "i18next": "^25.1.2",
     "lodash": "^4.17.21",
+    "mercadopago": "^2.8.0",
     "next": "^15.3.2",
     "next-i18next": "^15.4.2",
     "notistack": "^3.0.2",
