--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "slick-carousel": "^1.8.1",
     "stylis": "^4.3.6",
     "stylis-plugin-rtl": "^2.1.1",
+    "swr": "^2.3.6",
     "use-mask-input": "^3.4.2",
     "yup": "^1.6.1",
     "zustand": "^5.0.7"
